# ProgettoPCS2025

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  main_prova.cpp  main_test.cpp
Debug/: CMakeCache.txt  Cell0Ds.inp  Cell0Ds.txt  Cell1Ds.inp  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt  Makefile  cmake_install.cmake  cube_face.txt  cube_vertex.txt  dodecahedron_face.txt  tetrahedron_vertex.txt
Debug/ExportParaview/: Makefile  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake
Debug/src_test/: Makefile  cmake_install.cmake
Polyhedron/: cube_face.txt  dodecahedron_face.txt  dodecahedron_vertex.txt  tetrahedron_face.txt
docs/html/: PolyhedronCollection_8hpp.html  PolyhedronCollection_8hpp.js  PolyhedronCollection_8hpp_source.html  README_8md.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  edge_8cpp.html  edge_8cpp.js  edge_8hpp.html  edge_8hpp.js  edge_8hpp_source.html  face_8cpp.html  face_8cpp.js  face_8hpp.html  face_8hpp.js  face_8hpp_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  index.js  namespaceedge.html  namespaceface.html  namespacemembers.html  namespacemembers_func.html  namespacepolyhedron.html  namespaces.html  namespaces_dup.js  namespaceutils.html  namespacevertex.html  navtreedata.js  navtreeindex0.js  polyhedron_8cpp.html  (+19 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_1.js  files_2.js  files_3.js  (+16 more)
docs/latex/: PolyhedronCollection_8hpp.tex  PolyhedronCollection_8hpp_source.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  edge_8cpp.tex  edge_8hpp.tex  edge_8hpp_source.tex  face_8cpp.tex  face_8hpp.tex  face_8hpp_source.tex  files.tex  index.tex  namespaceedge.tex  namespaceface.tex  namespacepolyhedron.tex  namespaces.tex  namespaceutils.tex  namespacevertex.tex  polyhedron_8cpp.tex  polyhedron_8hpp.tex  polyhedron_8hpp_source.tex  prova_8cpp.tex  refman.tex  structPolyhedronCollection.tex  utils_8cpp.tex  utils_8hpp.tex  utils_8hpp_source.tex  vertex_8cpp.tex  vertex_8hpp.tex  vertex_8hpp_source.tex
src/: CMakeLists.txt  ParaviewExporter.cpp  PolyhedronCollection.hpp  edge.cpp  edge.hpp  face.cpp  face.hpp  polyhedron.cpp  polyhedron.hpp  prova.cpp  utils.cpp  utils.hpp  vertex.cpp  vertex.hpp
src_test/: CMakeLists.txt  test_edge.hpp  test_face.hpp  test_polyhedron.hpp  test_vertex.hpp
tests/: CMakeLists.txt  test_edge.hpp  test_face.hpp  test_vertex.cpp
